# Wikimapia

./: Cargo.toml  README.md  create_indexes.sql  create_tables.sql  docker-compose.yml  example.sql  language_codes.sql  stats.sql  text.xml
backend/: .dockerignore  Cargo.toml  Dockerfile  create_indexes.sql  create_tables.sql
backend/src/: file_utils.rs  main.rs  str_utils.rs
frontend/: .dockerignore  Dockerfile  index.html  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: Background.svelte  Card.svelte  DisplayText.svelte  DropdownSelect.svelte  Footer.svelte  Header.svelte
src/: file_utils.rs  main.rs  str_utils.rs
