[package]
name = "wikimapia-backend"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
bit-set = "0.8.0"
bzip2 = "0.5.0"
lazy_static = "1.5.0"
quick-xml = "=0.24.1"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["blocking"] }
rusqlite = "0.32.1"
scraper = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
